--- a/NETCLIX/src/main/resources/application.properties
+++ b/NETCLIX/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jwt.accessTokenExpireAt=1800000
+spring.jwt.refreshTokenExpireAt=604800000
+spring.jwt.secretKey=jwtKey
+spring.jwt.header=Auth
